Adding skills bar

--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -8,6 +8,8 @@ $defaultSectionBGColor: #fff;
 $personInfoAboutMe: #9baab3;
 $primaryColor: #000;
 $secondaryColor: #555;
+$progressBarColor: #447c4a;
+$progressBarBgColor: #a19f9f;
 
 $facebookColor: $headerTextColor;
 $twitterColor: $headerTextColor;
