--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -499,3 +499,38 @@ body {
   font-size: 36px;
   margin: 0;
 }
+
+.design-skills .skill {
+  margin: 0 0 15px 0;
+}
+.design-skills .skill .skill-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0 0 10px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.design-skills .skill .skill-top .name {
+  color: #000;
+  font-size: 14px;
+}
+.design-skills .skill .skill-top .percent {
+  color: #9baab3;
+  font-size: 14px;
+}
+.design-skills .skill .skill-bottom .progress {
+  height: 8px;
+  border-radius: 4px;
+  background-color: #a19f9f;
+}
+.design-skills .skill .skill-bottom .progress .bar {
+  display: block;
+  height: 100%;
+  background-color: #447c4a;
+  border-radius: 4px;
+}
