--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -10,6 +10,8 @@ $primaryColor: #000;
 $secondaryColor: #555;
 $progressBarColor: #447c4a;
 $progressBarBgColor: #a19f9f;
+$barDotFirstColor:#bbbbbb;
+$barDotSecondColor: #447c4a;
 
 $facebookColor: $headerTextColor;
 $twitterColor: $headerTextColor;
