--- a/assets/sass/sections/_aboutMe.scss
+++ b/assets/sass/sections/_aboutMe.scss
@@ -130,3 +130,55 @@
         }
     }
 }
+
+.timeline {
+
+    .item {
+        display: flex;
+
+        .date {
+            flex: 0 0 100px;
+            text-align: right;
+        }
+
+        .bar {
+            flex: 0 0 100px;
+            position: relative;
+
+            &::after {
+                content: "";
+                background-color: $progressBarBgColor;
+                height: 100%;
+                width: 1px;
+                position: absolute;
+                inset: 0 0 0 50%;
+                transform: -50% 0;
+            }
+
+            .dot {
+                width: 21px;
+                height: 21px;
+                border-radius: 50%;
+                background-color: $barDotFirstColor;
+                position: relative;
+                z-index: 1;
+                margin: 10px auto 0 auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &::after {
+                    content: "";
+                    display: block;
+                    width: 13px;
+                    height: 13px;
+                    border-radius: 50%;
+                    background-color: $barDotSecondColor;
+                    border: 2px solid;
+
+                }
+            }
+
+        }
+    }
+}
