--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -534,3 +534,58 @@ body {
   background-color: #447c4a;
   border-radius: 4px;
 }
+
+.timeline .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.timeline .item .date {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100px;
+          flex: 0 0 100px;
+  text-align: right;
+}
+.timeline .item .bar {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100px;
+          flex: 0 0 100px;
+  position: relative;
+}
+.timeline .item .bar::after {
+  content: "";
+  background-color: #a19f9f;
+  height: 100%;
+  width: 1px;
+  position: absolute;
+  inset: 0 0 0 50%;
+  -webkit-transform: -50% 0;
+          transform: -50% 0;
+}
+.timeline .item .bar .dot {
+  width: 21px;
+  height: 21px;
+  border-radius: 50%;
+  background-color: #bbbbbb;
+  position: relative;
+  z-index: 1;
+  margin: 10px auto 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.timeline .item .bar .dot::after {
+  content: "";
+  display: block;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background-color: #447c4a;
+  border: 2px solid;
+}
